# reveriecore

./: .gitignore  AGENTS.md  CONFIGURATION.md  CONTRIBUTING.md  DIAGRAM.md  LICENSE  README.md  __init__.py  config.py  conftest.py  database.py  enrichment.py  graph_query.py  mirror.py  plugin.yaml  provider.py  pruning.py  pyproject.toml  requirements.txt  reranking.py  retrieval.py  retrieval_base.py  reveriecore.yaml.example  rewriting.py  run_tests.sh  schemas.py  telemetry.py
ADR/: 000-genesis.md  001-deterministic-graph-rag-architecture.md  002-unified-intent-architecture.md  003-iterative-layered-expansion.md  004-multiplicative-semantic-gravity.md  005-soul-aware-cascading-importance.md  006-reverie-framework-pipeline-architecture.md  007-external-configuration-decoupling.md  008-opentelemetry-integration.md  009-post-ranking-pruning-handler.md  Deterministic Graph-RAG Architecture.md
AGENT_DOCS/: db_schema.md  how_memory_retrieval_works.md  how_memory_storage_works.md  how_mesa_works.md  how_pruning_works.md  how_reranking_works.md  inference_embeddings_with_python.md  knowledge_graph_mechanics.md  memory_anchoring.md  memory_association_types.md  memory_export_import.md  memory_importance_score.md  memory_plugin_plan.md  memory_types.md  optimizations_history.md  provenance_and_id.md  sqlite_as_db.md  telemetry.md
PRD/: PRD.md
tests/: RAGAS_BENCHMARK_INSTRUCTIONS.md  benchmark_data.json  benchmark_ragas.py  benchmark_results.json  conftest.py  debug_query.py  graph_status.py  ingest_docs.py  mesa_experiment.py  mesa_technical_proof.py  mock_hermes.py  (+30 more)
(+9 files in other folders)
